# python-project-template

./: CLAUDE.md  README.md
.claude/: settings.local.json
project-name/: .env.example  .gitignore  README.md  config.json.template  main.py  pyproject.toml  requirements.txt
project-name/utils/documentation/: README.md  add_filepath_comments.py  api_doc_generator.py  api_key_scanner.py  changelog_builder.py  dead_code_finder.py  dependency_visualizer.py  env_documenter.py  requirements_analyzer.py  todo_extractor.py  tree_generator.py
project-name/utils/shared/: __init__.py  az_doc_intelligence_processor.py  document_formatter.py
